--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="card-container" id="cardContainer"></div>
-        <div class="message" id="message">点击卡牌翻转它们</div>
+        <div class="message" id="message"></div>
         <script src="script.js"></script>
     </body>
 </html>
