--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kards抽卡模拟器</title>
+        <title>Kards 抽卡模拟器</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="titlebar" id="titlebar">
+            <div>Kards 抽卡模拟器（By 晦涩弗里曼）</div>
+            <div class="window-controls">
+                <button id="minimize-btn">-</button>
+                <button id="maximize-btn">□</button>
+                <button id="close-btn">×</button>
+            </div>
+        </div>
         <div class="card-container" id="cardContainer"></div>
         <div class="message" id="message"></div>
         <script src="script.js"></script>
